--- a/templates/map.html
+++ b/templates/map.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-<iframe srcdoc="{{ map_code }}" width="1920" height="1080"></iframe>
+<iframe srcdoc="{{ map_code }}" width="100%" height="100%" class="iframe"></iframe>
 {% endblock %}
